--- a/layout.html
+++ b/layout.html
@@ -198,6 +198,7 @@ $(document).ready(function(){
 	runMagazineTemplates()
 
 	setCurrentPage(0)
+	setScrollLimit()
 })
 
 // XXX does not seem to work...
