progress, last experiment semi-failed, still workable but ScrollTo might go out the window...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/layout.html
+++ b/layout.html
@@ -135,7 +135,7 @@ $(document).ready(function(){
 				//		does not actually scroll to it -- no animation and/or
 				//		.ScrollTo does notwork...
 				//setCurrentPage()
-				limit_scroll()
+				//limit_scroll()
 			})
 	//}
 
@@ -147,7 +147,7 @@ $(document).ready(function(){
 	runMagazineTemplates()
 
 	setCurrentPage(0)
-	limit_scroll()
+	//limit_scroll()
 })
 
 var SCROLL_LIMIT = 800 * 1.5
@@ -181,7 +181,7 @@ function clear_limits(){
 
 <div class="viewer">
 
-<div class='scroller'>
+<!--div class='scroller'-->
 
 	<div class="magazine" name="PortableMag">
 		<div class="cover page">
@@ -543,7 +543,7 @@ function clear_limits(){
 		</div>
 	</div>
 
-</div>
+<!--/div-->
 
 </div>
 
