--- a/layout.html
+++ b/layout.html
@@ -146,8 +146,8 @@ $(document).ready(function(){
 	// expand the templates...
 	runMagazineTemplates()
 
-	setCurrentPage(0)
-	//limit_scroll()
+	//setCurrentPage(0)
+	limit_scroll()
 })
 
 var SCROLL_LIMIT = 800 * 1.5
@@ -181,7 +181,7 @@ function clear_limits(){
 
 <div class="viewer">
 
-<!--div class='scroller'-->
+<div class='scroller'>
 
 	<div class="magazine" name="PortableMag">
 		<div class="cover page">
@@ -543,7 +543,7 @@ function clear_limits(){
 		</div>
 	</div>
 
-<!--/div-->
+</div>
 
 </div>
 
