even more testing...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -762,7 +762,8 @@ $(document).ready(function(){
 					<p>
 						<a id="downloader" download="magazine.json">download magazine...</a>
 						<input type="file" id="upload" name="files[]"/>
-						<a href="./layout.html">alternative layout</a>
+						<a href="./layout.html">alternative layout (native scroll)</a>
+						<a href="./layout-iscroll.html">alternative layout (iscroll)</a>
 					</p>
 
 					<hr noshade color="silver">
