--- a/layout-iscroll.html
+++ b/layout-iscroll.html
@@ -128,17 +128,15 @@ $(document).ready(function(){
 		}, 
 		function(k){console.log(k)}))
 
-	/*
 	window.myScroll = new iScroll('viewer', {
 		snap: true,
 		momentum: false,
 		hScrollbar: false,
-		//onScrollEnd: function () {
-		//	document.querySelector('#indicator > li.active').className = '';
-		//	document.querySelector('#indicator > li:nth-child(' + (this.currPageX+1) + ')').className = 'active';
-		//}
+		/*onScrollEnd: function () {
+			document.querySelector('#indicator > li.active').className = '';
+			document.querySelector('#indicator > li:nth-child(' + (this.currPageX+1) + ')').className = 'active';
+		}*/
 	})
-	*/
 	
 
 
