seems to work, tweeking and playing around...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/layout-iscroll.html
+++ b/layout-iscroll.html
@@ -129,7 +129,8 @@ $(document).ready(function(){
 		function(k){console.log(k)}))
 
 	window.myScroll = new iScroll('viewer', {
-		snap: true,
+		//snap: true,
+		snap: '.page',
 		momentum: false,
 		hScrollbar: false,
 		/*onScrollEnd: function () {
