an experiment with transform-scrolling + scale...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -159,12 +159,9 @@ $(document).ready(function(){
 			}, 500)
 		})
 
+	// testing scroll without zoom...
+	setPageScale(1)	
 
-	// setup the editor buttons...
-	// XXX
-	
-
-	
 })
 
 </script>
