--- a/layout-iscroll.html
+++ b/layout-iscroll.html
@@ -149,7 +149,7 @@ $(document).ready(function(){
 	})
 	
 	// XXX gets overwritten by iscroll...
-	//setMagazineScale(1.2)
+	setElementScale($('.page .content'), 0.5)
 
 
 	/*
