added yet another transition drag implementation...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -758,6 +758,7 @@ $(document).ready(function(){
 						<input type="file" id="upload" name="files[]"/>
 						<a href="./layout.html">alternative layout (native scroll)</a>
 						<a href="./layout-iscroll.html">alternative layout (iscroll)</a>
+						<a href="./layout-iscroll2.html">alternative layout (drag)</a>
 					</p>
 
 					<hr noshade color="silver">
