--- a/index.html
+++ b/index.html
@@ -756,9 +756,9 @@ $(document).ready(function(){
 					<p>
 						<a id="downloader" download="magazine.json">download magazine...</a>
 						<input type="file" id="upload" name="files[]"/>
-						<a href="./layout.html">alternative layout (native scroll)</a>
-						<a href="./layout-iscroll.html">alternative layout (iscroll)</a>
-						<a href="./layout-iscroll2.html">alternative layout (drag)</a>
+						Alternative layout: <a href="./layout.html">native scroll</a>, 
+						<a href="./layout-iscroll.html">iscroll</a>, 
+						<a href="./layout-iscroll2.html">hand-written drag</a>
 					</p>
 
 					<hr noshade color="silver">
