--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -79,32 +79,6 @@
 <script>
 
 $(document).ready(function(){
-	// log...
-	/*
-	var _log = $('<div id="log"></div>')
-		.css({
-			position: 'fixed',
-			background: 'silver',
-			opacity: 0.5,
-			width: 200,
-			height: '80%',
-			top: 10,
-			left: 10,
-			'z-index': 90000,
-			overflow: 'hidden',
-			padding: 10,
-		})
-		.text('log')
-		.appendTo($('body'))
-	function log(text){
-		_log.html(_log.html() + '<br>' + text + '')
-		_log.scrollTop(_log.prop('scrollHeight'))
-	}
-	function clear_log(){
-		_log.html('')
-	}
-	*/
-
 	// keyboard...
 	$(document)
 		.keydown(makeKeyboardHandler({
@@ -129,20 +103,13 @@ $(document).ready(function(){
 		}, 
 		function(k){console.log(k)}))
 
-	/*
-	window.myScroll = new iScroll('viewer', {
-		vScroll: false,
-		snap: '.page',
-		momentum: false,
-		hScrollbar: false,
-	})
-	*/
-	
 
+	logger = Logger()
 	var scrolling = false
 	var _x = null
 	$('.viewer')
 		.on('mousedown touchstart', function(){
+			logger.log('[touchstart]')
 			scrolling = true
 			togglePageDragging('on')
 		})
@@ -153,11 +120,13 @@ $(document).ready(function(){
 			}
 			var x = evt.clientX
 			if(scrolling){
+				logger.log('[drag]')
 				shiftMagazineTo(getMagazineShift() + (x - _x))
 			}
 			_x = x
 		})
 		.on('mouseup touchend', function(){
+			logger.log('[touchend]')
 			scrolling = false
 			togglePageDragging('off')
 		})
