--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -131,8 +131,9 @@ $(document).ready(function(){
 			togglePageDragging('off')
 		})
 
-
+	// XXX need to setup style for android to work...
 	$('.viewer').css({overflow: 'hidden'})
+
 
 	// expand the templates...
 	runMagazineTemplates()
