--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -118,6 +118,7 @@ $(document).ready(function(){
 		})
 
 		.on('mousemove touchmove', function(evt){
+			logger.log('[drag]')
 			//var t = evt.timeStamp || Date.now();
 			evt.preventDefault()
 			if(_x == null){
@@ -125,7 +126,6 @@ $(document).ready(function(){
 			}
 			var x = evt.clientX
 			if(scrolling && Math.abs(x-_x) > 6){
-				//logger.log('[drag]')
 				shiftMagazineTo(getMagazineShift() + (x - _x))
 			}
 			_x = x
