--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -108,6 +108,7 @@ $(document).ready(function(){
 	var scrolling = false
 	var _x = null
 	var _t = null
+	USE_TRANSFORM = false
 	$('.viewer')
 
 		.on('mousedown touchstart', function(){
@@ -118,7 +119,6 @@ $(document).ready(function(){
 		})
 
 		.on('mousemove touchmove', function(evt){
-			logger.log('[drag]')
 			//var t = evt.timeStamp || Date.now();
 			evt.preventDefault()
 			if(_x == null){
@@ -126,7 +126,9 @@ $(document).ready(function(){
 			}
 			var x = evt.clientX
 			if(scrolling && Math.abs(x-_x) > 6){
-				shiftMagazineTo(getMagazineShift() + (x - _x))
+				var s = getMagazineShift()
+				logger.log('[drag: '+s+']')
+				shiftMagazineTo(s + (x - _x))
 			}
 			_x = x
 		})
