--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -120,7 +120,8 @@ $(document).ready(function(){
 
 		.on('mousemove touchmove', function(evt){
 			//var t = evt.timeStamp || Date.now();
-			evt.preventDefault()
+			//evt.preventDefault()
+			console.log('move...')
 			if(_x == null){
 				_x = evt.clientX
 			}
