--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -120,13 +120,18 @@ $(document).ready(function(){
 
 		.on('mousemove touchmove', function(evt){
 			//var t = evt.timeStamp || Date.now();
-			//evt.preventDefault()
-			if(_x == null){
-				_x = evt.clientX
+			evt.preventDefault()
+			if(evt.touches && evt.touches.length > 0){
+				var pos_x = evt.touches[0].pointX
+			} else {
+				var pos_x = evt.clientX
 			}
-			var x = evt.clientX
+
+			if(_x == null){
+				_x = pos_x
+			}
+			var x = pos_x
 			if(scrolling && Math.abs(x-_x) > 6){
-				console.log('drag...')
 				var s = getMagazineShift()
 				shiftMagazineTo(s + (x - _x))
 			}
