--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -120,6 +120,7 @@ $(document).ready(function(){
 
 		.on('mousemove touchmove', function(evt){
 			//var t = evt.timeStamp || Date.now();
+			console.log('moving...')
 			evt.preventDefault()
 			if(evt.touches && evt.touches.length > 0){
 				var pos_x = evt.touches[0].pointX
@@ -131,7 +132,8 @@ $(document).ready(function(){
 				_x = pos_x
 			}
 			var x = pos_x
-			if(scrolling && Math.abs(x-_x) > 6){
+			console.log(pos_x)
+			if(scrolling){
 				var s = getMagazineShift()
 				shiftMagazineTo(s + (x - _x))
 			}
