--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -120,7 +120,8 @@ $(document).ready(function(){
 
 		.on('touchmove', function(evt){
 			evt.preventDefault()
-			var pos_x = evt.touches[0].pointX
+			//var pos_x = evt.touches[0].pointX
+			var pos_x = evt.pageX
 
 			if(_x == null){
 				_x = pos_x
