--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -127,7 +127,7 @@ $(document).ready(function(){
 				_x = pos_x
 			}
 			var x = pos_x
-			//console.log(pos_x)
+			console.log(pos_x)
 			if(scrolling){
 				var s = getMagazineShift()
 				shiftMagazineTo(s + (x - _x))
