--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -123,7 +123,7 @@ $(document).ready(function(){
 			//var pos_x = event.touches[0].pointX
 			var pos_x = event.pageX
 
-			console.log(event, event.pageX, event.clientX, event.touches)
+			console.log(event.pageX + ' ' + event.clientX +' '+ event.touches)
 
 			if(_x == null){
 				_x = pos_x
