--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -128,11 +128,11 @@ $(document).ready(function(){
 			var x = pos_x
 			if(scrolling){
 				var s = getMagazineShift()
+				logger.log('>>>' + s)
 				shiftMagazineTo(s + (x - _x))
 			}
 			_x = x
 		})
-		/*
 		.on('mousemove', function(evt){
 			//var t = evt.timeStamp || Date.now();
 			evt.preventDefault()
@@ -142,14 +142,13 @@ $(document).ready(function(){
 				_x = pos_x
 			}
 			var x = pos_x
-			//console.log(pos_x)
 			if(scrolling){
 				var s = getMagazineShift()
+				logger.log('>>>' + s)
 				shiftMagazineTo(s + (x - _x))
 			}
 			_x = x
 		})
-		*/
 
 		.on('mouseup touchend', function(){
 			logger.log('[touchend]')
