--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -128,7 +128,7 @@ $(document).ready(function(){
 			var x = pos_x
 			if(scrolling){
 				var s = getMagazineShift()
-				logger.log('>>>' + s)
+				//logger.log('>>>' + s)
 				shiftMagazineTo(s + (x - _x))
 			}
 			_x = x
