got the manual scroll working...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -139,6 +139,7 @@ $(document).ready(function(){
 				//logger.log('[touchend]')
 				scrolling = false
 				togglePageDragging('off')
+				_x = null
 			})
 
 	} else {
@@ -168,6 +169,7 @@ $(document).ready(function(){
 				//logger.log('[touchend]')
 				scrolling = false
 				togglePageDragging('off')
+				_x = null
 			})
 		}
 
