--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ $(document).ready(function(){
 
 		// user interactions...
 		.swipe({
-			swipeStatus: swipeHandler,
+			swipeStatus: makeSwipeHandler(),
 
 			// XXX these get called instead of pinches...
 			swipeUp: function(event, direction, distance, duration, fingerCount){
